fix(LCB):  aligning ques content with ques label (#2613)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1986,7 +1986,6 @@ span.token.active-word {
   z-index: 1000000;
 }
 
-.fr-view p,
 .fr-view table {
   margin: 8px 0;
 }
